--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  min-width: 900px;
   margin: 0;
   height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
